--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,10 +1,13 @@
 .profile__subtitle {
-  max-width: 318px;
+  max-width: 290px;
   margin: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 895px) {
