--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,8 +1,8 @@
 .button_type_close {
+  margin-top: -365px;
+  margin-right: -465px;
   width: 41px;
   height: 41px;
-  margin-top: 158px;
-  margin-right: calc(100% - ((100% - 430px)/2 + 430px + 41px));
   background-image: url(../../../images/popup-close-button.svg);
   background-position: center;
   background-color: transparent;
@@ -14,8 +14,15 @@
   background-color: rgba(0, 0, 0, 0);
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 520px) {
   .button_type_close {
-    margin-top: 258px;
+    margin-right: -400px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .button_type_close {
+    margin-top: -400px;
+    margin-right: -255px;
   }
 }
