--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -4,7 +4,7 @@
   margin: 12px 0 0;
   background-image: url(../../../images/profile-edit-button.svg);
   background-position: center;
-  background-color: #000000;
+  background-color: transparent;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   cursor: pointer;
