--- a/blocks/button/_type/button_type_save.css
+++ b/blocks/button/_type/button_type_save.css
@@ -15,11 +15,6 @@
 }
 
 .button_type_save:hover {
+  background-color: #000000;
   opacity: .8;
-}
-
-@media screen and (max-width: 420px) {
-  .button_type_save {
-    font-size: 14px;
-  }
 }
