--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,7 +1,6 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   gap: 21px 18px;
 }
 
