--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,17 +1,5 @@
 .popup__form {
   display: flex;
   flex-direction: column;
-  margin: 0 36px 36px;
-}
-
-@media screen and (max-width: 520px) {
-  .popup__form {
-    margin: 0 16px 36px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .popup__form {
-    margin: 0 6px 36px;
-  }
+  margin: 34px 36px 36px;
 }
