--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,8 +1,9 @@
 .popup__item {
   max-width: 358px;
   min-height: 27px;
-  margin: 0;
+  margin: 0 0 27px;
   border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -10,8 +11,6 @@
   color: #000000;
 }
 
-@media screen and (max-width: 420px) {
-  .popup__item {
-    font-size: 10px;
-  }
+.popup__item:last-of-type {
+  margin-bottom: 48px;
 }
