--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,10 +1,13 @@
 .profile__title {
-  max-width: 295px;
+  max-width: 330px;
   margin: 0;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 380px) {
