--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,8 +1,8 @@
 .button {
-  transition: 1s linear 0.5s;
+  background-color: transparent;
+  transition: linear 0.5s;
 }
 
 .button:hover {
-  background-color: transparent;
   opacity: .6;
 }
