--- a/blocks/button/_type/button_type_close-pics.css
+++ b/blocks/button/_type/button_type_close-pics.css
@@ -1,4 +1,4 @@
-.button_type_close {
+.button_type_close-pics {
   margin-top: -40px;
   margin-right: -35px;
   width: 41px;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 460px) {
-  .button_type_close {
+  .button_type_close-pics {
     margin-top: -25px;
     margin-right: -25px;
     width: 25px;
