--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,5 +1,6 @@
 .card__image {
-  width: 100%;
-  min-height: 282px;
+  width: 282px;
+  height: 282px;
   border-radius: 10px 10px 0 0;
+  cursor: pointer;
 }
