--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,19 +1,5 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fit, 282px);
   gap: 21px 18px;
-}
-
-@media screen and (max-width: 890px) {
-  .cards {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-  }
-}
-
-@media screen and (max-width: 590px) {
-  .cards {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 1fr);
-  }
 }
