--- a/blocks/popup-cards/__container/popup-cards__container.css
+++ b/blocks/popup-cards/__container/popup-cards__container.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup-cards__container {
   display: flex;
   justify-content: space-between;
   width: 430px;
@@ -7,13 +7,13 @@
 }
 
 @media screen and (max-width: 520px) {
-  .popup__container {
+  .popup-cards__container {
     width: 380px;
   }
 }
 
 @media screen and (max-width: 460px) {
-  .popup__container {
-    width: 260px;
+  .popup-cards__container {
+    width: 240px;
   }
 }
