--- a/blocks/popup-cards/__form/popup-cards__form.css
+++ b/blocks/popup-cards/__form/popup-cards__form.css
@@ -1,4 +1,4 @@
-.popup__form {
+.popup-cards__form {
   display: flex;
   flex-direction: column;
   width: 430px;
@@ -6,8 +6,8 @@
 }
 
 @media screen and (max-width: 460px) {
-  .popup__form {
+  .popup-cards__form {
     width: 240px;
-    margin: 25px 15px;
+    margin: 30px 20px;
   }
 }
