--- a/blocks/popup-pics/popup-pics.css
+++ b/blocks/popup-pics/popup-pics.css
@@ -1,4 +1,4 @@
-.popup {
+.popup-pics {
   visibility: hidden;
   opacity: 0;
   transition: visibility .3s, opacity .3s linear;
@@ -10,5 +10,5 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .9);
 }
