--- a/blocks/popup-cards/__input/popup-cards__input.css
+++ b/blocks/popup-cards/__input/popup-cards__input.css
@@ -1,7 +1,6 @@
-.popup__item {
+.popup-cards__input {
   max-width: 358px;
-  min-height: 27px;
-  margin: 0 0 27px;
+  min-height: 25px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-style: normal;
@@ -9,8 +8,4 @@
   font-size: 14px;
   line-height: 1.21;
   color: #000000;
-}
-
-.popup__item:last-of-type {
-  margin-bottom: 48px;
 }
