--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -1,4 +1,4 @@
-.button_type_create {
+.popup__button-save {
   max-width: 358px;
   height: 50px;
   margin: 0;
@@ -14,14 +14,13 @@
   cursor: pointer;
 }
 
-.button_type_create:hover {
+.popup__button-save:hover {
   background-color: #000000;
   opacity: .8;
 }
 
 @media screen and (max-width: 460px) {
-  .button_type_create {
-    height: 40px;
+  .popup__button-save {
     font-size: 14px;
   }
 }
