--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,4 +1,4 @@
-.popup__button-save_disabled {
+.popup__button_disabled {
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, .2);
   color: rgba(0, 0, 0, .2);
