--- a/blocks/popup/__caption/popup__caption.css
+++ b/blocks/popup/__caption/popup__caption.css
@@ -1,4 +1,6 @@
-.popup-pics__caption {
+.popup__caption {
+  grid-column-start: 1;
+  margin: 0;
   max-width: 290px;
   font-style: normal;
   font-weight: normal;
