--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.button_type_close {
+.popup__close {
   grid-column-start: 2;
   margin-top: -40px;
   margin-right: -35px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 460px) {
-  .button_type_close {
+  .popup__close {
     margin-top: -25px;
     margin-right: -25px;
     width: 25px;
