--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,7 +24,10 @@
 @import url('../blocks/card/__title/card__title.css');
 @import url('../blocks/card/__like/card__like.css');
 @import url('../blocks/card/__like/_active/card__like_active.css');
+@import url('../blocks/card/__like-counter/card__like-counter.css');
 @import url('../blocks/card/__delete/card__delete.css');
+@import url('../blocks/card/__delete/_visible/card__delete_visible.css');
+@import url('../blocks/card/__delete/_invisible/card__delete_invisible.css');
 @import url('../blocks/page/__footer/page__footer.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__paragraph/footer__paragraph.css');
